# vibe-check

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  get_token.py
include/: files.h  logger.h
src/: files.c  logger.c  main.c
tests/: check_files.c  check_logger.c  check_standard_rootpath.c
